--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,17 @@
+// This is the project-level build.gradle file located at android/build.gradle
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Add this line to include the Google services classpath
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'com.google.gms:google-services:4.3.15'
+    }
+}
+
 allprojects {
     repositories {
         google()
