--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   firebase_core: ^3.4.1
   firebase_auth: ^5.2.0
   cloud_firestore: ^5.3.0
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  http: ^1.2.2
+  webview_flutter: ^4.0.1
 
 
 
