--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,9 +8,9 @@ plugins {
 
 dependencies {
   // Import the Firebase BoM
-  implementation platform('com.google.firebase:firebase-bom:33.2.0')
-  implementation 'com.google.firebase:firebase-auth:23.5.0'
-    implementation 'com.google.firebase:firebase-core:21.2.0'
+  implementation platform('com.google.firebase:firebase-bom:33.3.0')
+//   implementation 'com.google.firebase:firebase-auth:23.5.0'
+//     implementation 'com.google.firebase:firebase-core:21.2.0'
 
 
   // TODO: Add the dependencies for Firebase products you want to use
@@ -51,7 +51,7 @@ android {
         applicationId = "com.example.eco_alert"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        minSdk 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
